--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<span class="image avatar"><img src="images/profilepic.jpg" alt="" /></span>
+					<h1 id="logo"><a href="#">Meredith L. Rawls</a></h1>
+					<p>Postdoctoral Research Associate<br />
+					LSST Data Management<br />
+					Stellar Astronomer</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -52,7 +53,7 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
+										<h2>Welcome</h2>
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
