--- a/index.html
+++ b/index.html
@@ -50,15 +50,21 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
-							<section id="one">
+						<!-- About -->
+							<section id="about">
 								<div class="container">
 									<header class="major">
-										<h2>Welcome</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>Meredith L. Rawls, PhD</h2>
+										<p>Developing software for a firehose of telescope data
+										and using binary stars to study the cosmos</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I am a postdoc working with the Large Synoptic Survey Telescope
+									(LSST) Data Management (DM) group at the University of Washington in Seattle.
+									The LSST will begin its ten-year survey to image the entire sky
+									every few nights in 2022, which means we need robust software to
+									handle terabytes of images every night in place well before then.
+									When I'm not doing software development with the DM team, you can
+									probably find me DOING OTHER THINGS.</p>
 								</div>
 							</section>
 
