--- a/index.html
+++ b/index.html
@@ -69,26 +69,31 @@
 							</section>
 
 
-						<!-- Three -->
-							<section id="three">
+
+						<!-- Software -->
+							<section id="software">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Software Development</h3>
+									<p>Astronomy uses computers and that's hard.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Things that go bump in the night</h4>
+												<p>My team focuses on Alert Production.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Building tools for the community</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer 
+												in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
+									</div>
+								</div>
+							</section>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
