new stars section

--- a/index.html
+++ b/index.html
@@ -94,14 +94,32 @@
 									</div>
 								</div>
 							</section>
+
+	                <!-- Stars -->
+							<section id="stars">
+								<div class="container">
+									<h3>Stellar Astrophysics</h3>
+									<p>Binary stars are the best.</p>
+									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Eclipsing binaries and asteroseismology</h4>
+												<p>Yay RG/EBs!</p>
 											</div>
 										</article>
-									</div>
+										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Pairing APOGEE and Kepler</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer 
+												in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+				                    </div>
+								</div>
+							</section>
+
 						<!-- Beyond -->
 							<section id="beyond">
 								<div class="container">
