more placeholder text

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 										and using binary stars to study the cosmos</p>
 									</header>
 									<p>I am a postdoc working with the Large Synoptic Survey Telescope
-									(LSST) Data Management (DM) group at the University of Washington in Seattle.
-									The LSST will begin its ten-year survey to image the entire sky
-									every few nights in 2022, which means we need robust software to
-									handle terabytes of images every night in place well before then.
-									When I'm not doing software development with the DM team, you can
-									probably find me DOING OTHER THINGS.</p>
+									(LSST) Data Management (DM) group at the University of Washington.
+									The LSST will begin its ten-year mission to continually image the sky
+									in 2022, so we need software ready to handle terabytes of nightly data 
+									well before then. I'm also an active researcher in stellar astrophysics 
+									and a relentless science communicator.</p>
+									<p>My <a href="mrawls_cv.pdf">CV in PDF form</a> is available here.</p>
 								</div>
 							</section>
 
 						<!-- Software -->
 							<section id="software">
 								<div class="container">
-									<h3>Software Development</h3>
+									<h3>Software by and for astronomers</h3>
 									<p>Astronomy uses computers and that's hard.</p>
 									<div class="features">
 										<article>
@@ -81,8 +81,7 @@
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Building tools for the community</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer 
-												in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Words are the best.</p>
 											</div>
 										</article>
 									</div>
@@ -92,8 +91,8 @@
 	                <!-- Stars -->
 							<section id="stars">
 								<div class="container">
-									<h3>Stellar Astrophysics</h3>
-									<p>Binary stars are the best.</p>
+									<h3>Stars are not always predictable</h3>
+									<p>But binary stars are the best.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -106,8 +105,7 @@
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Pairing APOGEE and Kepler</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer 
-												in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Some words go here.</p>
 											</div>
 										</article>
 				                    </div>
@@ -117,10 +115,8 @@
 						<!-- Beyond -->
 							<section id="beyond">
 								<div class="container">
-									<h3>Science in Context</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer 
-									in curae ac faucibus integer non. Adipiscing cubilia elementum integer 
-									lorem ipsum dolor sit amet.</p>
+									<h3>Beyond research and programming</h3>
+									<p>Some words go here. I like these default skills.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Write all the code</li>
 										<li class="fa-cubes">Stack small boxes</li>
@@ -131,14 +127,12 @@
 									</ul>
 								</div>
 							</section>
-
+                                                        
 						<!-- Publications -->
 							<section id="publications">
 								<div class="container">
 									<h3>Publications</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer 
-									in curae ac faucibus integer non. Adipiscing cubilia elementum integer. 
-									Integer eu ante ornare amet commetus.</p>
+									<p>Link to some papers here.</p>
 								</div>
 							</section>
 
@@ -149,7 +143,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Website Design: "Read Only" by <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
