--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>	
+						<li><a href="mailto:mrawls@uw.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/mrawls" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://twitter.com/merrdiff" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://astronomerrdiff.wordpress.com" class="icon fa-rss"><span class="label">AstronoMerrdiff</span></a></li>
+						<li><a href="https://www.linkedin.com/in/mrawls" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://www.facebook.com/meredith.rawls" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="mrawls_cv.pdf" class="icon fa-file-text"><span class="label">CV</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -56,11 +59,11 @@
 									</header>
 									<p>I am a postdoc working with the Large Synoptic Survey Telescope
 									(LSST) Data Management (DM) group at the University of Washington.
-									The LSST will begin its ten-year mission to continually image the sky
-									in 2022, so we need software ready to handle terabytes of nightly data 
-									well before then. I'm also an active researcher in stellar astrophysics 
-									and a relentless science communicator.</p>
-									<p>My <a href="mrawls_cv.pdf">CV in PDF form</a> is available here.</p>
+									The LSST will collect frames for a decade-long movie of the sky beginning
+									in 2022. My team develops software to process terabytes of nightly data.
+									I'm also an active researcher in stellar astrophysics and a relentless 
+									science communicator.</p>
+									<p><a href="mrawls_cv.pdf">My CV in PDF form is available here</a>.</p>
 								</div>
 							</section>
 
@@ -124,6 +127,20 @@
 										<li class="fa-coffee">Drink much coffee</li>
 										<li class="fa-bolt">Lightning bolt</li>
 										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-university">Teach skills</li>
+										<li class="fa-music">Make nice sounds</li>
+										<li class="fa-tree">Go outside?</li>
+										<li class="fa-area-chart">Plot some stuff</li>
+										<li class="fa-bar-chart">Keep making plots</li>
+										<li class="fa-code-fork">I have no idea what I'm doing</li>
+										<li class="fa-chain-broken">Break everything</li>
+										<li class="fa-superscript">Math!</li>
+										<li class="fa-star">Astrobites</li>
+										<li class="fa-wordpress">Blog</li>
+										<li class="fa-share-alt">Disseminate</li>
+										<li class="fa-star-half">I lost half my star</li>
+										<li class="fa-moon-o">Moon</li>
+										<li class="fa-laptop">Stare at screens</li>
 									</ul>
 								</div>
 							</section>
