switch a couple favicons around

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 									<h3>Beyond research and programming</h3>
 									<p>Some words go here.</p>
 									<ul class="feature-icons">
-										<li class="fa-tree"><a href="http://comscicon.com">ComSciCon</a>-PNW<br />
+										<li class="fa-users"><a href="http://comscicon.com">ComSciCon</a>-PNW<br />
 										Organizing	committee chair (Spring 2017)</li>
 										<li class="fa-share-alt"><a href="https://aas.org/outreach/aas-astronomy-ambassadors-program">Astronomy Ambassador</a><br />
 										Trained in effective outreach</li>
 										<li class="fa-pencil"><a href="https://astrobites.org">Astrobites Collaboration</a><br />
 										Author, editor, web design, social media</li>
-										<li class="fa-users"><a href="https://www.ghostranch.org/instructors/meredith-rawls/">Retreat Instructor</a><br />
+										<li class="fa-tree"><a href="https://www.ghostranch.org/instructors/meredith-rawls/">Retreat Instructor</a><br />
 										Astronomy weekends at Ghost Ranch</li>
 										<li class="fa-globe"><a href="http://astronomy.nmsu.edu/geas">Distance Education</a><br />
 										Piloted and developed lab exercises</li>
