update ComSciCon-PNW website

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									<p>I am involved in a variety of important projects in addition to 
 									my work with LSST and stellar astronomy.</p>
 									<ul class="feature-icons">
-										<li class="fa-users"><a href="http://comscicon.com">ComSciCon</a>-PNW<br />
+										<li class="fa-users"><a href="http://comscicon.com/comscicon-pnw2017">ComSciCon-PNW</a><br />
 										Organizing	committee chair (Spring 2017)</li>
 										<li class="fa-share-alt"><a href="https://aas.org/outreach/aas-astronomy-ambassadors-program">Astronomy Ambassador</a><br />
 										Trained in effective outreach</li>
