Minor changes to homepage and CV

--- a/index.html
+++ b/index.html
@@ -124,11 +124,14 @@
 											<a href="#" class="image"><img src="images/decam-diffim.png" alt="multi-color image of the DECam field of view with a difference imaging cartoon overlaid" /></a>
 											<div class="inner">
 												<h4>Comparing difference imaging pipelines</h4>
-												<p>I am working with UW undergraduates Courtney Hooks and Thomas Waters to compare
+												<p>I am working with UW undergraduate Thomas Waters to compare
 												variable sources classified in the High Cadence Transient Survey (HiTS) data release
-												with the same data processed using difference imaging with the LSST Science Pipelines.
-												The HiTS dataset is an LSST precursor which can help improve the LSST software
-												before the 10-year survey begins in 2022.</p>
+												with the same data processed using difference imaging with the <a href="https://pipelines.lsst.io">
+												LSST Science Pipelines</a>.
+												HiTS is an LSST precursor which can help improve the LSST software
+												before the 10-year survey begins in 2022. Courtney Hooks also worked on this project
+												with us in Fall 2019 as part of the <a href="http://depts.washington.edu/premap/cohort-15-research-projects/">
+												Pre-MAP 15 Cohort</a>.</p>
 											</div>
 										</article>
 										<article>
