Update Rubin Obs name and add AP Pipeline difference imaging blurb

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 					<span class="image avatar"><img src="images/profilepic.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Meredith L. Rawls</a></h1>
 					<p>Research Scientist<br />
+					Vera C. Rubin Observatory<br />
 					LSST Data Management<br />
 					Stellar Astronomer</p>
 				</header>
@@ -57,10 +58,10 @@
 										<p>Developing software for a firehose of telescope data
 										and using binary stars to study the cosmos</p>
 									</header>
-									<p>I work with the Large Synoptic Survey Telescope
-									(LSST) <a href="http://dm.lsst.org">Data Management</a> group at the 
-									University of Washington as a Research Scientist and 
-									<a href="https://dirac.astro.washington.edu">DIRAC</a> Fellow.
+									<p>I work with the Rubin Observatory Legacy Survey of Space and Time (LSST) 
+									<a href="https://www.lsst.org/about/dm">Data Management</a> group at the
+									University of Washington. I am a Research Scientist in the Department of Astronomy
+									and a <a href="https://dirac.astro.washington.edu">DIRAC</a> Fellow.
 									The LSST will collect frames for a decade-long movie of the sky beginning
 									in 2022. My team develops software to process terabytes of nightly data.
 									I'm also an active researcher in stellar astrophysics and a relentless 
@@ -88,6 +89,17 @@
 											</div>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/hits-diffim.png" alt="cartoon of difference imaging showing new image, template image, and difference image" /></a>
+											<div class="inner">
+												<h4>Difference imaging precursor datasets</h4>
+												<p>LSST will subtract a reference template image from a new image fresh off the telescope,
+												and anything that changes or moves may be interesting.
+												I work to measure and reduce false positives in difference images for
+												precursor datasets, and I develop
+												visualization tools for large-scale difference imaging.</p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/scicoder01.jpg" alt="astronomers collaborating on programming around circular tables in a conference room" /></a>
 											<div class="inner">
 												<h4>Building tools for the community</h4>
@@ -95,7 +107,7 @@
 												and works with popular python packages like <a href="http://www.astropy.org">astropy</a>.
 												Astronomers worldwide can use our tools to analyze
 												data from their favorite telescope too.<br />
-												<a href="http://github.com/lsst">Check it out on github</a>.</p>
+												<a href="https://pipelines.lsst.io">Check out the LSST Science Pipelines here</a>.</p>
 											</div>
 										</article>
 									</div>
@@ -124,26 +136,29 @@
 											<a href="#" class="image"><img src="images/decam-diffim.png" alt="multi-color image of the DECam field of view with a difference imaging cartoon overlaid" /></a>
 											<div class="inner">
 												<h4>Comparing difference imaging pipelines</h4>
-												<p>I am working with UW undergraduate Thomas Waters to compare
+												<p>I am working with UW undergrad Thomas Waters to compare
 												variable sources classified in the High Cadence Transient Survey (HiTS) data release
-												with the same data processed using difference imaging with the <a href="https://pipelines.lsst.io">
-												LSST Science Pipelines</a>.
-												HiTS is an LSST precursor which can help improve the LSST software
-												before the 10-year survey begins in 2022. Courtney Hooks also worked on this project
-												with us in Fall 2019 as part of the <a href="http://depts.washington.edu/premap/cohort-15-research-projects/">
+												with the same data processed with LSST software.
+												HiTS is an LSST precursor we can use to improve LSST software
+												before the 10-year survey begins. Thomas is particularly interested in
+												analyzing difference imaging light curves of variable Active Galactic Nuclei.
+												Courtney Hooks also worked on this project
+												with us in Fall 2019 with the <a href="http://depts.washington.edu/premap/cohort-15-research-projects/">
 												Pre-MAP 15 Cohort</a>.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/apogee2.png" alt="illustration of the portion of the sky APOGEE observed that includes the Kepler field" /></a>
 											<div class="inner">
-												<h4>Pairing APOGEE and Kepler</h4>
-												<p>I led a research collaboration to identify and model eclipsing systems
+												<h4>Pairing data from APOGEE and Kepler</h4>
+												<p>I led a research collaboration to identify and model eclipsing binary systems
 												observed by both the <a href="http://kepler.nasa.gov">Kepler space telescope</a>
 												and the <a href="http://www.sdss.org/surveys/apogee-2/">APOGEE spectrograph</a>.
-												The main result was a paper by Joni Marie Clark Cunningham for whom this project
-												comprised the majority of her Master's Thesis. The collaboration had team members
-												from Fisk-Vanderbilt, New Mexico State University, and the University of Washington.<p>
+												The main result was <a href="https://ui.adsabs.harvard.edu/abs/2019AJ....158..106C/abstract">
+												a paper</a> by Joni Marie Clark Cunningham for whom this project
+												comprised the majority of her Master's Thesis. We measured precise masses and radii
+												for seven binary pairs and modeled their evolutionary histories.
+												The collaboration had team members from Fisk-Vanderbilt, New Mexico State University, and UW.<p>
 											</div>
 										</article>
 										<article>
